# Repomind

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  golden_qas.yaml  pyproject.toml  repo_mind_agent_cursor_implementation_guide.md  repo_tree.json
.github/workflows/: ci.yml
docs/: demo.md
repo_mind_agent/: __init__.py  cli.py  orchestrator.py
repo_mind_agent/tools/: sql_query.py  static_analysis.py  vector_search.py
repo_mind_agent/ui/: trace_viewer.py
scripts/: ingest_repo.py
tests/: test_eval_harness.py  test_ingest_repo.py  test_orchestrator.py  test_sql_query.py  test_vector_search.py
